--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,22 @@ img {
     overflow:none;
     border-color:#428bca;
     border-style:solid;
+}
+h1 {
+color: red;
+text-align: center;
+}
+
+h2 {
+font-style: italic;
+text-align: center;
+}
+
+p {
+font-family: sans-serif;
+}
+
+ul {
+font-size: 20px;
+line-height: 30px;
+}
