--- a/css/styles.css
+++ b/css/styles.css
@@ -6,22 +6,33 @@ img {
     overflow:none;
     border-color:#428bca;
     border-style:solid;
-}
+    }
+    
 h1 {
-color: red;
-text-align: center;
-}
-
+    color: red;
+    line-height: 25px;
+    }
+    
 h2 {
-font-style: italic;
-text-align: center;
+    font-style: italic;
+    line-height: 100px;
 }
-
+    
 p {
-font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 30px;
+    font-size: 20px;
 }
-
+    
 ul {
-font-size: 20px;
-line-height: 30px;
+    font-size: 20px;
+    line-height: 30px;
+}
+    
+.container-sm {
+    padding-left: 190px;
+    padding-top: 25px;
 }
